# lib/models/sucursal.js
@@ -40,5 +40,9 @@ export default class Sucursal extends Model {
       foreignKey: 'sucursalId',
       as: 'stock',
     });
+    db.Sucursal.hasMany(db.Usuario, {
+      foreignKey: 'sucursalId',
+      as: 'administradores',
+    });
   }
 }
